[2022-07-25 modify github actions]

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,18 +40,10 @@ jobs:
         run: yarn --frozen-lockfile
 
       # run build script
-      - name: Build VuePress site
-        run: yarn docs:build
-
-      # please check out the docs of the workflow for more details
-      # @see https://github.com/crazy-max/ghaction-github-pages
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2
-        with:
-          # deploy to gh-pages branch
-          target_branch: gh-pages
-          # deploy the default output dir of VuePress
-          build_dir: docs/.vuepress/dist
+      - name: Build and Deploy
+        uses: JamesIves/github-pages-deploy-action@master
         env:
-          # @see https://docs.github.com/en/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: .vuepress/dist
+          BUILD_SCRIPT: npm install && npm run docs:build
