--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "eric.wangpy@outlook.com",
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-active-header-links": "^2.0.0-beta.49",
     "@vuepress/plugin-search": "^2.0.0-beta.49",
+    "@vuepress/plugin-toc": "^2.0.0-beta.49",
     "vuepress": "^2.0.0-beta.49"
   },
   "scripts": {
