--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
+    "@vuepress/theme-default": "^2.0.0-beta.49",
     "yarn": "^1.22.19"
   }
 }
