--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "author": "eric.wangpy@outlook.com",
   "license": "MIT",
   "devDependencies": {
-    "@vuepress/plugin-active-header-links": "next",
-    "@vuepress/plugin-search": "next",
-    "vuepress": "next"
+    "@vuepress/plugin-search": "^2.0.0-beta.48",
+    "vuepress": "^2.0.0-beta.48"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
