--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,13 +35,13 @@ jobs:
             ${{ runner.os }}-yarn-
 
       # install dependencies if the cache did not hit
-      - name: Install dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn --frozen-lockfile
+      # - name: Install dependencies
+      #   if: steps.yarn-cache.outputs.cache-hit != 'true'
+      #   run: yarn --frozen-lockfile
 
       # run build script
       - name: Build VuePress site
-        run: yarn docs:build
+        run: npm run docs:build
 
       # please check out the docs of the workflow for more details
       # @see https://github.com/crazy-max/ghaction-github-pages
