[2022-08-28] change way of using yarn

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,9 +35,10 @@ jobs:
             ${{ runner.os }}-yarn-
 
       # install dependencies if the cache did not hit
-      # - name: Install dependencies
-      #   if: steps.yarn-cache.outputs.cache-hit != 'true'
-      #   run: yarn --frozen-lockfile
+      - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        # run: yarn --frozen-lockfile
+        run: yarn install && yarn add vuepress -D
 
       # run build script
       - name: Build VuePress site
