--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,8 +37,7 @@ jobs:
       # install dependencies if the cache did not hit
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
-        # run: yarn --frozen-lockfile
-        run: npm install && yarn add vuepress -D
+        run: yarn --frozen-lockfile
 
       # run build script
       - name: Build VuePress site
