--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "eric.wangpy@outlook.com",
   "license": "MIT",
   "devDependencies": {
-    "@vuepress/plugin-search": "^2.0.0-beta.48",
-    "vuepress": "^2.0.0-beta.48"
+    "@vuepress/plugin-search": "2.0.0-beta.49",
+    "vuepress": "2.0.0-beta.49"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
